--- a/Pandas_Homework/HeroesOfPymoli/HeroesOfPymoli_starter.ipynb
+++ b/Pandas_Homework/HeroesOfPymoli/HeroesOfPymoli_starter.ipynb
@@ -1463,7 +1463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 240,
+   "execution_count": 247,
    "metadata": {
     "scrolled": true
    },
@@ -1504,25 +1504,11 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>178</th>\n",
-       "      <th>Oathbreaker, Last Hope of the Breaking Storm</th>\n",
-       "      <td>12</td>\n",
-       "      <td>4.23</td>\n",
-       "      <td>50.76</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>82</th>\n",
-       "      <th>Nirvana</th>\n",
-       "      <td>9</td>\n",
-       "      <td>4.90</td>\n",
-       "      <td>44.10</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>145</th>\n",
-       "      <th>Fiery Glass Crusader</th>\n",
-       "      <td>9</td>\n",
-       "      <td>4.58</td>\n",
-       "      <td>41.22</td>\n",
+       "      <th>19</th>\n",
+       "      <th>Pursuit, Cudgel of Necromancy</th>\n",
+       "      <td>8</td>\n",
+       "      <td>1.02</td>\n",
+       "      <td>8.16</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>108</th>\n",
@@ -1532,11 +1518,25 @@
        "      <td>31.77</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>19</th>\n",
-       "      <th>Pursuit, Cudgel of Necromancy</th>\n",
-       "      <td>8</td>\n",
-       "      <td>1.02</td>\n",
-       "      <td>8.16</td>\n",
+       "      <th>145</th>\n",
+       "      <th>Fiery Glass Crusader</th>\n",
+       "      <td>9</td>\n",
+       "      <td>4.58</td>\n",
+       "      <td>41.22</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>82</th>\n",
+       "      <th>Nirvana</th>\n",
+       "      <td>9</td>\n",
+       "      <td>4.90</td>\n",
+       "      <td>44.10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>178</th>\n",
+       "      <th>Oathbreaker, Last Hope of the Breaking Storm</th>\n",
+       "      <td>12</td>\n",
+       "      <td>4.23</td>\n",
+       "      <td>50.76</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1545,36 +1545,36 @@
       "text/plain": [
        "                                                      Purchase Count  \\\n",
        "Item ID Item Name                                                      \n",
-       "178     Oathbreaker, Last Hope of the Breaking Storm              12   \n",
-       "82      Nirvana                                                    9   \n",
-       "145     Fiery Glass Crusader                                       9   \n",
-       "108     Extraction, Quickblade Of Trembling Hands                  9   \n",
        "19      Pursuit, Cudgel of Necromancy                              8   \n",
+       "108     Extraction, Quickblade Of Trembling Hands                  9   \n",
+       "145     Fiery Glass Crusader                                       9   \n",
+       "82      Nirvana                                                    9   \n",
+       "178     Oathbreaker, Last Hope of the Breaking Storm              12   \n",
        "\n",
        "                                                      Item Price  \\\n",
        "Item ID Item Name                                                  \n",
-       "178     Oathbreaker, Last Hope of the Breaking Storm        4.23   \n",
-       "82      Nirvana                                             4.90   \n",
-       "145     Fiery Glass Crusader                                4.58   \n",
-       "108     Extraction, Quickblade Of Trembling Hands           3.53   \n",
        "19      Pursuit, Cudgel of Necromancy                       1.02   \n",
+       "108     Extraction, Quickblade Of Trembling Hands           3.53   \n",
+       "145     Fiery Glass Crusader                                4.58   \n",
+       "82      Nirvana                                             4.90   \n",
+       "178     Oathbreaker, Last Hope of the Breaking Storm        4.23   \n",
        "\n",
        "                                                      Total Purcahse Value  \n",
        "Item ID Item Name                                                           \n",
-       "178     Oathbreaker, Last Hope of the Breaking Storm                 50.76  \n",
-       "82      Nirvana                                                      44.10  \n",
-       "145     Fiery Glass Crusader                                         41.22  \n",
+       "19      Pursuit, Cudgel of Necromancy                                 8.16  \n",
        "108     Extraction, Quickblade Of Trembling Hands                    31.77  \n",
-       "19      Pursuit, Cudgel of Necromancy                                 8.16  "
+       "145     Fiery Glass Crusader                                         41.22  \n",
+       "82      Nirvana                                                      44.10  \n",
+       "178     Oathbreaker, Last Hope of the Breaking Storm                 50.76  "
       ]
      },
-     "execution_count": 240,
+     "execution_count": 247,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "most_popular_item.sort_values([\"Total Purcahse Value\"], ascending=False)"
+    "most_popular_item.sort_values('Total Purcahse Value')"
    ]
   },
   {
